--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat App</title>
+    <title>Cha-Cha</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Monospace&display=swap" rel="stylesheet">
     <style>
@@ -54,7 +54,7 @@
 <body>
     <div id="wall">
         <div id="wall-text">
-            الموقع تحت الصيانة ادخل بريدك الالكترون لتلقي اشعار الاكتمال:<br>
+            الموقع تحت الصيانة ادخل بريدك الالكتروني لتلقي اشعار الاكتمال:<br>
             <input type="text" id="input" placeholder="Type here...">
             <button id="submit">Submit</button>
         </div>
@@ -69,7 +69,6 @@
         </form>
     </div>
     <div class="container">
-        <div class="header">Chat App</div>
         <div class="sidebar">
             <h3>Active Users</h3>
             <ul id="userList"></ul>
